--- a/Dockerfile.perl5.36-app-base
+++ b/Dockerfile.perl5.36-app-base
@@ -7,6 +7,7 @@ RUN mkdir -p /usr/src/perl
 WORKDIR /usr/src/perl
 
 RUN curl -SLO https://www.cpan.org/src/5.0/perl-5.36.0.tar.gz \
+    && echo 'e26085af8ac396f62add8a533c3a0ea8c8497d836f0689347ac5abd7b7a4e00a *perl-5.36.0.tar.gz' | sha256sum -c - \
     && tar --strip-components=1 -xaf perl-5.36.0.tar.gz -C /usr/src/perl \
     && rm perl-5.36.0.tar.gz \
     && ./Configure -des \
