remove some more files when we are done for a slightly smaller image
thanks viraptor (https://lobste.rs/s/suqpzg/dockerfile_for_perl_5_36_alpine_with#c_v45zyu)
and esabol (https://github.com/domm/perl-docker/commit/1dc020ed9e354017cd0b82fcf149ecd55b6e12a9#r75443454)

--- a/Dockerfile.perl5.36-app-base
+++ b/Dockerfile.perl5.36-app-base
@@ -24,15 +24,15 @@ RUN curl -SLO https://www.cpan.org/src/5.0/perl-5.36.0.tar.gz \
         -Dprefix='/opt/perl' \
     && make -j$(nproc) \
     && make install \
-    && rm -fr /usr/src/perl
+    && rm -fr /usr/src/perl /var/cache/apk
 
 WORKDIR /opt/perl
 ENV PATH="/opt/perl/bin:${PATH}"
-RUN cd /opt/perl
 
 RUN curl -o /tmp/cpm -sL --compressed https://git.io/cpm \
     && chmod 755 /tmp/cpm \
     && /tmp/cpm install -g App::cpm IO::Socket::SSL Cpanel::JSON::XS \
-    && rm -fr /root/.perl-cpm
+    && rm -fr /root/.perl-cpm /tmp/cpm
 
+RUN apk del zlib-dev openssl-dev
 
