--- a/Dockerfile.perl5.38-app-base
+++ b/Dockerfile.perl5.38-app-base
@@ -6,10 +6,10 @@ RUN apk update && apk upgrade && apk add --no-cache curl tar make gcc build-base
 RUN mkdir -p /usr/src/perl
 WORKDIR /usr/src/perl
 
-RUN curl -SLO https://www.cpan.org/src/5.0/perl-5.36.0.tar.gz \
-    && echo 'e26085af8ac396f62add8a533c3a0ea8c8497d836f0689347ac5abd7b7a4e00a *perl-5.36.0.tar.gz' | sha256sum -c - \
-    && tar --strip-components=1 -xaf perl-5.36.0.tar.gz -C /usr/src/perl \
-    && rm perl-5.36.0.tar.gz \
+RUN curl -SLO https://www.cpan.org/src/5.0/perl-5.38.0.tar.gz
+#RUN echo '213ef58089d2f2c972ea353517dc60ec3656f050dcc027666e118b508423e517 perl-5.38.0.tar.gz' | sha256sum -c perl-5.38.0.tar.gz
+RUN tar --strip-components=1 -xaf perl-5.38.0.tar.gz -C /usr/src/perl \
+    && rm perl-5.38.0.tar.gz \
     && ./Configure -des \
         -Duse64bitall \
         -Dcccdlflags='-fPIC' \
